--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <article>
     <h1>EDWIN CASTAÑO RAMIREZ</h1>
-    <img src="E:\curriculum.git\media\images\edwin.png" alt="*****">
+    <img src="https://imagizer.imageshack.com/img922/131/nZieLY.png" alt="*****">
     <h2>ESTUDIOS</h2>
     <blockquote>
       <p>AÑO 2016 PEREIRA TECNOLOGO EN DISEÑO Y ADMIINISTRACION DE SISTEMAS INFORMATICOS (CIDCA)</p>
