--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 <body>
   <article>
     <h1>EDWIN CASTAÑO RAMIREZ</h1>
-    <img src="https://imagizer.imageshack.com/img922/131/nZieLY.png" alt="*****">
-    <h2>ESTUDIOS</h2>
+    <img src="https://imagizer.imageshack.com/img922/131/nZieLY.png" alt="">
+    <h1>ESTUDIOS</h1>
     <blockquote>
       <p>AÑO 2016 PEREIRA TECNOLOGO EN DISEÑO Y ADMIINISTRACION DE SISTEMAS INFORMATICOS (CIDCA)</p>
       <p>AÑO 2015 PEREIRA TECNICA PROFESIONAL EN SISTEMAS (CIDCA)</p>
       <p>AÑO 1997 PEREIRA SECUNDARIOS INEM FELIPE PEREZ </p>
     </blockquote>
-    <h2>EXPERIENCIA LABORAL</h2>
+    <h1>EXPERIENCIA LABORAL</h1>
     <table>
       <thead>
         <tr>
@@ -31,8 +31,17 @@
           <td>CARGO:PRODUCCION Y SOPORTE TECNICO    /</td>
           <td>AGENTE DE SOPORTE</td>
         </tr>
-        
+        <th>REFERENCIA PERSONALES</th>
+        <tr>
+
         </tr>
+        <td>HECTOR HERNAN PRIETO</td>
+        </tr>
+        <th>FORMACIONES ADICIONALES</th>
+        <tr>
+          
+        </tr>
+        <td>SEGURIDAD INFORMATICA</td>
       </tbody>
     </table>
   </article>
